# python-dio

./: estruturas_condicionais.py  identacao_blocos.py  opAritmeticos.py  opComparacao.py
.env/: pyvenv.cfg
.env/Scripts/: activate  activate.bat
00 - Fundamentos/desafios/: atualizando_sistema_bancario.py  desafio_v1.py  desafio_v2.py  sistema_bancario.py
00 - Fundamentos/estrutura condicional/: estrutura_condicional_aninhada.py  identacao_blocos.py
00 - Fundamentos/estrutura repeticao/: estrutura_repeticao_break.py  estrutura_repeticao_for.py
00 - Fundamentos/operadores/: operadores_atribuicao.py  operadores_logicos.py
03 - Decoradores, Iteradores e Geradores/: 1_datetime.py  4_primeiro_decorador.py  5.1_decorador_retorna_valor_func_decorada copy.py  5.2_decorador_introspeccao.py  5_decorador_com_argumentos.py  timedelta.py
04 - Data e Hora/: 3_strftime_strptime.py  pytz.py  timezone.py
05 - Manipulação de arquivos/: 2_operacao_escrita.py  3_os_shutill.py  4_tratamento_erro.py  5_boas_praticas.py  6_csv.py  lorem.txt  novo-arquivo-texto.txt  operacao_leitura.py  usuarios.csv
05 - Manipulação de arquivos/01 - Ambiente virtual/: pyproject.toml
05 - Manipulação de arquivos/01 - Ambiente virtual/.env/: pyvenv.cfg
05 - Manipulação de arquivos/01 - Ambiente virtual/.env/Scripts/: activate  activate.bat
desafios/: sistema_bancario.py
dicionario/: dict.py
estrutura condicional/: estrutura_condicional_ternaria.py
estrutura repeticao/: estrutura_repeticao_while.py
listas/: compreensao_listas.py  iterar_listas.txt  listas.py
listas/tuplas/: tuple.py
(+14 files in other folders)
