[tool.poetry]
name = "01 - ambiente virtual"
version = "0.1.0"
description = ""
authors = ["Matheus Meigre <142261154+matheusmeigre@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
